<resources>
    <!-- application strings -->
    <string name="app_name">MA Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- accessibility strings -->
    <string name="close_currently_playing">Close the currently playing view</string>
    <string name="handle_view_desc">Icon that allows you to reorder songs in the current playback list.</string>
    <string name="options_menu">Options menu</string>
    <string name="permission_required">Storage permission is required to run this application</string>
    <string name="play_or_pause_current_track">Play or pause current track</string>
    <string name="repeat_current_playlist">Repeat current playlist</string>
    <string name="search_results">Search results</string>
    <string name="settings">Settings</string>
    <string name="set_album_artwork">Set album artwork</string>
    <string name="shuffle_play_queue">Shuffle the current play queue</string>
    <string name="shuffle_tracks">Play a shuffled version of the music library</string>

    <!-- controls strings -->
    <string name="play_pause">Play or pause</string>
    <string name="play_prev">Play previous</string>
    <string name="skip_ahead">Skip ahead a track</string>
    <string name="skip_back">Skip back a track</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <!-- library strings -->
    <string name="album_artwork">Album artwork</string>
    <string name="artist">Artist</string>
    <string name="check_fields_not_empty">Check none of the fields are empty</string>
    <string name="details_saved">Details saved</string>
    <string name="disc">Disc</string>
    <string name="error">An error has occurred. If the song file has been moved or deleted please wait for the library
to refresh.</string>
    <string name="library">My Library</string>
    <string name="no_results">No results found</string>
    <string name="songs">Songs</string>
    <string name="track">Track</string>
    <string name="year">Year</string>
    <!-- menu strings -->
    <string name="added_to_queue">%1$s has been added to the play queue</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="edit_metadata">Edit music info</string>
    <string name="ok">OK</string>
    <string name="play_next">Play next</string>
    <string name="play_queue">Play queue</string>
    <string name="remove_from_queue">Remove from play queue</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_hint">Search music</string>
    <string name="title">Title</string>
    <string name="transition_image">transition_image</string>
    <string name="transition_title">transition_title</string>
    <string name="transition_subtitle">transition_subtitle</string>
    <string name="transition_subtitle2">transition_subtitle2</string>
    <string name="transition_back">transition_back</string>
    <string name="transition_play">transition_play</string>
    <string name="transition_forward">transition_forward</string>
    <string name="music_library_screen_label">music library</string>
    <!-- Notification Channel -->
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what music is currently playing in our App</string>
    <!-- Notification actions -->
    <string name="notification_skip_to_previous">Skip to previous track</string>
    <string name="notification_skip_to_next">Skip to next track</string>
    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>

    <!-- Error messages -->
    <string name="error_media_not_found">Could not locate requested media.</string>
    <string name="generic_error">The application has encountered an unexpected error.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_library">All Songs</string>
    <string name="play_list">Play Lists</string>
    <string name="artist_library">Artists</string>
    <string name="album_library">Albums</string>
    <string name="nav_to_songs_fragment">To Songs Fragment</string>
    <string name="nav_to_playback_fragment">To playback fragment</string>
</resources>